# fsa_builder

./: .gitignore  CMakeLists.txt  README.md
lib/include/: fsa_builder.h
lib/src/: CMakeLists.txt  builder.cpp  machine.cpp  state.cpp  token.cpp
